--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,7 +41,7 @@
                 <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Name</a> -->
 
                 <!-- Image Logo -->
-                <a class="navbar-brand logo-image" href="index.html"><img style="width:100px;height:100px;border-radius: 50%;" src="/4.jpeg" alt="alternative"></a> 
+                <a class="navbar-brand logo-image" href="/"><img style="width:100px;height:100px;border-radius: 50%;" src="/4.jpeg" alt="alternative"></a> 
 
                 <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
                     <span class="navbar-toggler-icon"></span>
