--- a/views/terms.ejs
+++ b/views/terms.ejs
@@ -29,7 +29,7 @@
         <link href="css/styles.css" rel="stylesheet">
         
         <!-- Favicon  -->
-        <link rel="icon" href="./4.jpeg">
+        <link rel="icon" href="/4.jpeg">
     </head>
     <body data-spy="scroll" data-target=".fixed-top">
         
@@ -41,7 +41,7 @@
                 <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Name</a> -->
 
                 <!-- Image Logo -->
-                <a class="navbar-brand logo-image" href="index.html"><img style="width:100px;height:100px;border-radius: 50%;" src="./4.jpeg" alt="alternative"></a> 
+                <a class="navbar-brand logo-image" href="/"><img style="width:100px;height:100px;border-radius: 50%;" src="/4.jpeg" alt="alternative"></a> 
 
                 <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
                     <span class="navbar-toggler-icon"></span>
@@ -50,13 +50,13 @@
                 <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link page-scroll" href="#beneficios">Benefícios e Vantagens</a>
+                            <a class="nav-link page-scroll" href="https://4alltvsite.vercel.app/#beneficios">Benefícios e Vantagens</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link page-scroll" href="#features">Instalação</a>
+                            <a class="nav-link page-scroll" href="https://4alltvsite.vercel.app/#pitch">Video Pitch</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link page-scroll" href="#precos">Assinatura</a>
+                            <a class="nav-link page-scroll" href="https://4alltvsite.vercel.app/#prices">Assinaturas</a>
                         </li>
                         <!-- <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Drop</a>
@@ -67,11 +67,11 @@
                             </div>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link page-scroll" href="#contato">Contato</a>
+                            <a class="nav-link page-scroll" href="https://api.whatsapp.com/send?phone=5524998698812&text=%20Quero%20ter%20acesso%20a%20Netflix%20+%20Primevideo%20+%20HBO%20+%20Telecine%20+%20Premiere%20+%20SportTV%20e%20todas%20as%20minhas%20s%C3%A9ries%20e%20filmes%20favoritos%20por%20apenas%20R$35,00">Contato</a>
                         </li>
                     </ul>
                     <span class="nav-item">
-                        <a class="btn-outline-sm page-scroll" href="#download">Download</a>
+                        <a class="btn-outline-sm page-scroll" href="https://4alltvsite.vercel.app/#download">Download</a>
                     </span>
                 </div> <!-- end of navbar-collapse -->
             </div> <!-- end of container -->
