--- a/views/index.ejs
+++ b/views/index.ejs
@@ -93,7 +93,7 @@
                     </div> <!-- end of col -->
                     <div class="col-lg-6">
                         <div class="image-container">
-                            <img id="image-header" class="img-fluid" src="images/header-smartphone.png" alt="alternative">
+                            <img id="image-header" class="img-fluid" src="images/tvgb.png" alt="alternative">
                         </div> <!-- end of image-container -->
                     </div> <!-- end of div -->
                 </div> <!-- end of row -->
@@ -115,7 +115,7 @@
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Netflix, Primevideo e GloboPlay por um baixo custo</h5>
-                                <p>Por apenas R$35,00/mês você tem acesso a toda a gama de Séries e Filmes</p>
+                                <p>Por apenas R$35,00/mês você tem acesso a toda a gama de Séries, Filmes e Canais ao vivo disponíveis pra você!</p>
                             </div>
                         </div>
                         <!-- end of card -->
