--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1267,12 +1267,34 @@ input[type='checkbox'] {
 	color: #8d8c96;
 	text-decoration: none;
 }
-
+#image-header
+   {
+    width: 100%;
+	height: 300px;
+   }
 @media (max-width: 991px)
 {
   #image-header
    {
-    width: 25% !important;
+    width: 100% !important;
+	height: 300px;
+   }
+}
+
+@media (max-width: 405px)
+{
+  #image-header
+   {
+    width: 100% !important;
+	height: 150px;
+   }
+}
+@media (max-width: 280px)
+{
+  #image-header
+   {
+    width: 100% !important;
+	height: 80px;
    }
 }
 
